# cloudscale-nlp-platform

./: .dockerignore  .gitignore  README.md  docker-compose.yml  important_notes.txt  pyproject.toml  ~$normalized_without_spacy.xlsx
.github/workflows/: deploy.yml  infra.yml
Infrastructure/: docker-compose.dev.yml
api_service/: Dockerfile  requirements_api.txt
api_service/app/: main.py
api_service/app/api/: health_router.py  jobs_router.py  storage_router.py
api_service/app/core/: __init__.py  celery_app.py  rate_limiter.py  redis_client.py  storage.py
api_service/app/schemas/: column_request.py
api_service/app/services/: job_service.py
common/: config.py  exceptions.py  storage_azure.py
data_layer/: database.py
data_layer/models/: job_model.py
data_layer/repositories/: job_repository.py
frontend_service/: Dockerfile  requirements.txt  streamlit_app_google_style.py
frontend_service/pages/: text.py
logger/: logging.py
utility/: aspect_col.py  aspect_text.py  chat_words.py  csv_cleaning.py  excel_cleaning.py  nlp.py
worker_service/: Dockerfile.agg  Dockerfile.cpu  Dockerfile.io  requirements_agg.txt  requirements_base.txt  requirements_cpu.txt
worker_service/app/: celery_worker_agg.py  celery_worker_cpu.py  celery_worker_io.py
worker_service/app/pipelines/: chunking_file.py  column_normalization_nlp_processing.py  process_row_groups_parquet.py  text_normalization_nlp_processing.py
worker_service/app/processor/: column_extraction_helper.py  convert_excel_parquet.py
worker_service/app/tasks/: aggregate_final.py  aggregate_partial.py  (+5 more)
